--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,21 @@ body {
     color: white;
 }
 
-.links img{
-    padding-top: 36.1px;
-    padding-left: 231px;
+.menu{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
 }
 
-.links a {
-    padding-top: 38px;
-    padding-left: 122.4px;
-    padding-right: 30px;
-    font-family: 'Roboto';
-    font-size: 16px;
-    color: #111111;
-    text-decoration: none;
+.wrapper{
+    height: 300px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
 }
