--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,18 @@ body {
     color: white;
 }
 
-.links img{
-    padding-top: 36.1px;
-    padding-left: 231px;
+.links {
+    text-align: left;
+    padding-left: 18%;
+    padding-top: 3%;""
+    display: block;
 }
 
 .links a {
-    padding-top: 38px;
-    padding-left: 122.4px;
-    padding-right: 30px;
+    padding: 15px;
     font-family: 'Roboto';
     font-size: 16px;
     color: #111111;
     text-decoration: none;
+    vertical-align: center;
 }
