--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -6,42 +6,54 @@
     border: 0;
 }
 
-body {
-    color: white;
+body{
+    width: 940px;
+    margin: auto;
 }
 
-<<<<<<< HEAD
-.links {
-    text-align: left;
-    padding-left: 18%;
-    padding-top: 3%;""
-    display: block;
-}
-
-.links a {
-    padding: 15px;
-    font-family: 'Roboto';
-    font-size: 16px;
-    color: #111111;
-    text-decoration: none;
-    vertical-align: center;
-=======
-.menu{
-    position: absolute;
-    top: 0px;
-    left: 0px;
+.links{
+    padding: 30px 0px;
     width: 100%;
     height: 100%;
-    -webkit-box-align: center;
+    grid-template-columns: 150px 42px 62px 1fr;
+    display: grid;
+    gap: 30px;
     align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
 }
 
-.wrapper{
-    height: 300px;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
->>>>>>> 7b2ae5d7db5c09be1da55e5675988f3bb78afaad
+.links a{
+    font-size: 16px;
+    text-decoration: none;
+    font-family: 'Roboto';
+    color: #111111;
+}
+
+.intro{
+    height: 366px;
+    background: #FBDFDB;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.intro__text h1{
+    font-family: 'Roboto', bold;
+    font-size: 32px;
+    color: #111111;
+    margin-bottom: 10px;
+}
+
+.intro__text p{
+    opacity: 0.7;
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #000000;
+    line-height: 28px;
+    width: 316px;
+}
+
+.intro img{
+    margin-top: 60px;
 }
