--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@
     margin: 0;
     padding: 0;
     border: 0;
+    color: #111111;
 }
 
 body{
-    width: 940px;
     margin: auto;
+    max-width: 940px;
 }
 
 .links{
@@ -25,7 +26,6 @@ body{
     font-size: 16px;
     text-decoration: none;
     font-family: 'Roboto';
-    color: #111111;
 }
 
 .intro{
@@ -41,7 +41,6 @@ body{
 .intro__text h1{
     font-family: 'Roboto', bold;
     font-size: 32px;
-    color: #111111;
     margin-bottom: 10px;
 }
 
@@ -67,4 +66,29 @@ body{
     font-size: 24px;
     color: #111111;
     margin-bottom: 10px;
+}
+
+.cards{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px
+}
+
+.card__image-container img{
+    border-radius: 15px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.card__content p{
+    font-family: 'Roboto';
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.card__info-author{
+    font-family: 'Roboto';
+    font-size: 14px;
+    color: #777777;
 }
