--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,9 @@
     color: #111111;
 }
 
-body{
-    margin: auto;
-    max-width: 940px;
-}
-
 .links{
+    max-width: 940px;
+    margin: auto;
     padding: 30px 0px;
     width: 100%;
     height: 100%;
@@ -29,6 +26,8 @@ body{
 }
 
 .intro{
+    max-width: 940px;
+    margin: auto;
     height: 366px;
     background: #FBDFDB;
     border-radius: 30px;
@@ -58,6 +57,8 @@ body{
 }
 
 .wrapper{
+    max-width: 940px;
+    margin: auto;
     padding: 30px 0px 20px 0px;
 }
 
@@ -65,14 +66,24 @@ body{
     font-family: 'Roboto', bold;
     font-size: 24px;
     color: #111111;
-    margin-bottom: 10px;
+    margin: 10px 0px;
+}
+
+.wrapper p{
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #444444;
+    line-height: 28px;
+    margin: 20px 0px;
 }
 
 .cards{
-    margin: 0 auto;
+    max-width: 940px;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px
+    gap: 20px;
+    margin-bottom: 60px;
 }
 
 .card__image-container img{
@@ -91,4 +102,16 @@ body{
     font-family: 'Roboto';
     font-size: 14px;
     color: #777777;
+}
+
+footer{
+    background-color: #EEEEEE;
+    text-align: center;
+    padding: 24px 0px;
+}
+
+footer p{
+    font-family: 'Roboto';
+    font-size: 14px;
+    color: #999999;
 }
